--- a/app/sass/_media_queries_desktop.sass
+++ b/app/sass/_media_queries_desktop.sass
@@ -132,6 +132,18 @@
 						text-decoration: none
 			
 			
+	.main__wrapper
+		display: flex
+			
+	.main__body
+		flex: 1 1 0
+		
+	.main__sidebar
+		flex: 0 1 auto
+		min-width: 301px
+		width: 301px
+		margin-left: 20px
+			
 		
 	.sect-prod
 	
