--- a/app/sass/_media_queries_tablet_desktop.sass
+++ b/app/sass/_media_queries_tablet_desktop.sass
@@ -650,6 +650,26 @@
 			padding-left: 48px
 			
 			
+			
+			
+	.news-detail
+	
+		&__imgs
+			display: flex
+			flex-wrap: wrap
+			margin-left: -7px
+			margin-right: -7px
+			
+			& > *
+				max-width: 33.3%
+				width: 33.3%
+				padding: 7px
+				
+				img
+					width: 100%
+					height: 100%
+					object-fit: cover
+			
 				
 			
 		
