--- a/app/sass/_media_queries_mobile.sass
+++ b/app/sass/_media_queries_mobile.sass
@@ -641,6 +641,35 @@
 				order: -1
 				align-self: flex-end
 				
+				
+	
+	.news-detail
+	
+		&__imgs
+			display: flex
+			flex-wrap: wrap
+			
+			a
+				max-width: 250px
+				margin-bottom: 10px
+				margin-right: 10px
+				
+				
+	
+	.main__sidebar
+		max-width: 320px
+		margin-top: 45px
+		
+		
+		
+	.aside-news
+	
+		&__list
+			display: flex
+			flex-wrap: wrap
+				
+				
+
 		
 		
 	#footer
@@ -1056,7 +1085,7 @@
 					
 				.t + .i
 					margin-left: 7px
-
+					
 	.f-nav
 		&__wrap
 			font-size: 13px
