--- a/app/sass/_media_queries_tablet.sass
+++ b/app/sass/_media_queries_tablet.sass
@@ -268,6 +268,32 @@
 				&__text
 					margin-top: 18px			
 		
+		
+	.main__sidebar
+		max-width: 720px
+		margin-top: 45px
+		
+		
+		
+	.aside-news
+	
+		&__list
+			display: flex
+			flex-wrap: wrap
+				
+			.item
+				width: 49%
+				max-width: 49%
+				margin: 0 0 25px 0
+				
+				& + .item
+					margin-top: 0
+				
+				&:nth-child(2n)
+					margin-left: 2%
+				
+		
+		
 	
 			
 
