--- a/app/sass/_media_queries_desktop.sass
+++ b/app/sass/_media_queries_desktop.sass
@@ -270,6 +270,30 @@
 			margin-top: 26px
 			
 	
+	.news-list
+		.item
+			min-width: 33.3%
+			width: 33.3%
+			
+		.item-big
+			min-width: 66.6%
+			width: 66.6%
+			
+			
+	
+	.catalog-info
+		
+		&__text
+			
+		&__btn
+			margin-left: 70px
+			
+	.catalog__list
+		
+		.item
+			width: 25%
+			max-width: 25%
+			min-width: 25%
 			
 	
 	
