--- a/app/sass/_media_queries_tablet_desktop.sass
+++ b/app/sass/_media_queries_tablet_desktop.sass
@@ -672,7 +672,120 @@
 			
 				
 			
+	.news-list
+		display: flex
+		flex-wrap: wrap
+		margin: 25px -10px 15px
 		
+		.item
+			
+			&__wrap
+				margin: 0 10px
+				
+		.item-big
+			
+			&__wrap
+				height: 100%
+				margin: 0 10px
+				overflow: hidden
+				
+			
+			.wrap
+				position: absolute
+				bottom: 28px
+				right: 70px
+				left: 30px
+				z-index: 1
+				
+				&__title
+					font-size: 20px
+					
+				&__desc
+					margin-top: 16px
+					
+					
+		
+	.reasons
+		display: flex
+		flex-wrap: wrap
+		
+		&__item
+			min-width: 50%
+			width: 50%
+			
+			&-wrap
+				margin: 0 10px
+				padding: 22px 25px 23px 91px
+				
+			&.--full
+				min-width: 100%
+				width: 100%
+				
+				
+	.feedback-bottom
+		&__form
+			width: 610px
+			margin-left: auto
+			margin-right: auto
+			
+			.form__row
+				margin-left: -10px
+				margin-right: -10px
+				display: flex
+				
+				.field
+					min-width: 50%
+					width: 50%
+					padding: 0 10px
+					margin: 0
+					
+					&.--full
+						width: 100%
+						min-width: 100%
+						
+						
+						
+	.contacts
+		
+		&__item
+			display: flex
+			
+			.wrap
+				width: 320px
+				flex: 0 1 auto
+				margin-right: 32px
+				padding-top: 5px
+				
+			.map
+				height: 450px
+				flex: 1 1 0
+				
+			
+				
+				
+	.catalog-info
+		display: flex
+		align-items: center
+		
+		&__text
+			flex: 1 1 0
+			
+		&__btn
+			flex: 0 1 auto
+			
+			
+	.catalog__list
+		display: flex
+		flex-wrap: wrap
+		margin-left: -10px
+		margin-right: -10px
+		
+		.item
+			max-width: 301px
+			flex: 0 1 auto 
+			
+			&__wrap
+				margin: 0 10px
 		
 
 
