--- a/app/sass/_sprite-svg.sass
+++ b/app/sass/_sprite-svg.sass
@@ -200,10 +200,20 @@
 
 
 
+@mixin mixin-i-download3 
+	width: 10px
+	height: 16px
+	background-position: -540px -448px
+	
+.i.i-download3 
+	@include mixin-i-download3
+
+
+
 @mixin mixin-i-flower 
 	width: 104px
 	height: 112px
-	background-position: -540px -448px
+	background-position: -550px -464px
 	
 .i.i-flower 
 	@include mixin-i-flower
@@ -213,7 +223,7 @@
 @mixin mixin-i-flower2 
 	width: 40px
 	height: 42px
-	background-position: -644px -560px
+	background-position: -654px -576px
 	
 .i.i-flower2 
 	@include mixin-i-flower2
@@ -223,7 +233,7 @@
 @mixin mixin-i-leaf 
 	width: 101px
 	height: 42px
-	background-position: -684px -602px
+	background-position: -694px -618px
 	
 .i.i-leaf 
 	@include mixin-i-leaf
@@ -233,7 +243,7 @@
 @mixin mixin-i-leaf2 
 	width: 13px
 	height: 11px
-	background-position: -785px -644px
+	background-position: -795px -660px
 	
 .i.i-leaf2 
 	@include mixin-i-leaf2
@@ -243,7 +253,7 @@
 @mixin mixin-i-leaf3 
 	width: 30px
 	height: 25px
-	background-position: -798px -655px
+	background-position: -808px -671px
 	
 .i.i-leaf3 
 	@include mixin-i-leaf3
@@ -253,7 +263,7 @@
 @mixin mixin-i-lines 
 	width: 19px
 	height: 9px
-	background-position: -828px -680px
+	background-position: -838px -696px
 	
 .i.i-lines 
 	@include mixin-i-lines
@@ -263,7 +273,7 @@
 @mixin mixin-i-lines2 
 	width: 19px
 	height: 9px
-	background-position: -847px -689px
+	background-position: -857px -705px
 	
 .i.i-lines2 
 	@include mixin-i-lines2
@@ -273,7 +283,7 @@
 @mixin mixin-i-lock 
 	width: 18px
 	height: 24px
-	background-position: -866px -698px
+	background-position: -876px -714px
 	
 .i.i-lock 
 	@include mixin-i-lock
@@ -283,7 +293,7 @@
 @mixin mixin-i-lock2 
 	width: 18px
 	height: 24px
-	background-position: -884px -722px
+	background-position: -894px -738px
 	
 .i.i-lock2 
 	@include mixin-i-lock2
@@ -293,7 +303,7 @@
 @mixin mixin-i-mail 
 	width: 114px
 	height: 98px
-	background-position: -902px -746px
+	background-position: -912px -762px
 	
 .i.i-mail 
 	@include mixin-i-mail
@@ -303,7 +313,7 @@
 @mixin mixin-i-mail2 
 	width: 17px
 	height: 11px
-	background-position: -1016px -844px
+	background-position: -1026px -860px
 	
 .i.i-mail2 
 	@include mixin-i-mail2
@@ -313,7 +323,7 @@
 @mixin mixin-i-mail3 
 	width: 25px
 	height: 16px
-	background-position: -1033px -855px
+	background-position: -1043px -871px
 	
 .i.i-mail3 
 	@include mixin-i-mail3
@@ -323,7 +333,7 @@
 @mixin mixin-i-micro 
 	width: 34px
 	height: 42px
-	background-position: -1058px -871px
+	background-position: -1068px -887px
 	
 .i.i-micro 
 	@include mixin-i-micro
@@ -333,17 +343,27 @@
 @mixin mixin-i-pdf 
 	width: 25px
 	height: 23px
-	background-position: -1092px -913px
+	background-position: -1102px -929px
 	
 .i.i-pdf 
 	@include mixin-i-pdf
 
 
 
+@mixin mixin-i-pdf2 
+	width: 25px
+	height: 23px
+	background-position: -1127px -952px
+	
+.i.i-pdf2 
+	@include mixin-i-pdf2
+
+
+
 @mixin mixin-i-phone 
 	width: 17px
 	height: 18px
-	background-position: -1117px -936px
+	background-position: -1152px -975px
 	
 .i.i-phone 
 	@include mixin-i-phone
@@ -353,7 +373,7 @@
 @mixin mixin-i-phone2 
 	width: 120px
 	height: 120px
-	background-position: -1134px -954px
+	background-position: -1169px -993px
 	
 .i.i-phone2 
 	@include mixin-i-phone2
@@ -363,7 +383,7 @@
 @mixin mixin-i-phone3 
 	width: 16px
 	height: 16px
-	background-position: -1254px -1074px
+	background-position: -1289px -1113px
 	
 .i.i-phone3 
 	@include mixin-i-phone3
@@ -373,7 +393,7 @@
 @mixin mixin-i-pointer 
 	width: 14px
 	height: 14px
-	background-position: -1270px -1090px
+	background-position: -1305px -1129px
 	
 .i.i-pointer 
 	@include mixin-i-pointer
@@ -383,7 +403,7 @@
 @mixin mixin-i-pointer2 
 	width: 17px
 	height: 17px
-	background-position: -1284px -1104px
+	background-position: -1319px -1143px
 	
 .i.i-pointer2 
 	@include mixin-i-pointer2
@@ -393,7 +413,7 @@
 @mixin mixin-i-pointer3 
 	width: 14px
 	height: 14px
-	background-position: -1301px -1121px
+	background-position: -1336px -1160px
 	
 .i.i-pointer3 
 	@include mixin-i-pointer3
@@ -403,7 +423,7 @@
 @mixin mixin-i-quotes 
 	width: 88px
 	height: 60px
-	background-position: -1315px -1135px
+	background-position: -1350px -1174px
 	
 .i.i-quotes 
 	@include mixin-i-quotes
@@ -413,7 +433,7 @@
 @mixin mixin-i-shield 
 	width: 39px
 	height: 39px
-	background-position: -1403px -1195px
+	background-position: -1438px -1234px
 	
 .i.i-shield 
 	@include mixin-i-shield
@@ -423,7 +443,7 @@
 @mixin mixin-i-spica 
 	width: 40px
 	height: 56px
-	background-position: -1442px -1234px
+	background-position: -1477px -1273px
 	
 .i.i-spica 
 	@include mixin-i-spica
@@ -433,7 +453,7 @@
 @mixin mixin-i-sunflower 
 	width: 41px
 	height: 57px
-	background-position: -1482px -1290px
+	background-position: -1517px -1329px
 	
 .i.i-sunflower 
 	@include mixin-i-sunflower
@@ -443,7 +463,7 @@
 @mixin mixin-i-temp 
 	width: 68px
 	height: 96px
-	background-position: -1523px -1347px
+	background-position: -1558px -1386px
 	
 .i.i-temp 
 	@include mixin-i-temp
@@ -453,7 +473,7 @@
 @mixin mixin-i-test_tubes 
 	width: 40px
 	height: 39px
-	background-position: -1591px -1443px
+	background-position: -1626px -1482px
 	
 .i.i-test_tubes 
 	@include mixin-i-test_tubes
@@ -463,7 +483,7 @@
 @mixin mixin-i-trash 
 	width: 40px
 	height: 56px
-	background-position: -1631px -1482px
+	background-position: -1666px -1521px
 	
 .i.i-trash 
 	@include mixin-i-trash
