--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -55,9 +55,10 @@
 /* ********** MAIN ********** */
 
 #main 
-	padding: 28px 0 52px
+	padding: 28px 0 0
 	
 .main__content
+	padding-bottom: 52px
 	+mtb
 	
 	& > .inner-wrapper
@@ -65,6 +66,9 @@
 		
 .main__wrapper
 	margin-top: 30px
+	
+.main__body
+	+mtb
 	
 
 /* ****** breadcrumbs ****** */
@@ -493,6 +497,600 @@
 
 
 
+/* ****** news-list ****** */
+.news-list 
+	
+	.item
+		margin: 10px 0
+		
+		&__img
+			height: 0
+			padding-bottom: 54%
+			position: relative
+			
+			
+			a
+				position: absolute
+				top: 0
+				right: 0
+				bottom: 0
+				left: 0
+				
+				img
+					width: 100%
+					height: 100%
+					object-fit: cover
+					
+		&__title
+			margin-top: 9px
+			font-family: $font-title, sans-serif
+			font-size: 17px
+			line-height: 1.35
+			font-weight: bold
+			
+		&__text
+			margin-top: 7px
+			font-size: 14px
+			color: #616267
+			
+		&__bottom
+			margin-top: 11px
+			font-size: 15px
+			
+			.link-detail
+				font-weight: 500
+				color: #71AB36
+				text-decoration: none
+				
+				.t
+					text-decoration: underline
+					
+				&:hover
+					.t
+						text-decoration: none
+
+
+	.item-big
+		margin: 10px 0
+		
+		&__wrap
+			position: relative
+			
+			&:before
+				content: ""
+				position: absolute
+				top: 0px
+				left: 0px
+				right: 0
+				bottom: 0
+				background: linear-gradient(360deg, rgba(35, 36, 48, 0.71) 0%, rgba(35, 36, 48, 0.1) 100%)
+				z-index: 1
+				
+			img
+				position: absolute
+				top: 0
+				left: 0
+				min-width: 100%
+				min-height: 100%
+				object-fit: cover
+			
+			
+		.wrap
+			color: #fff
+			
+			&__desc
+				.date
+					padding-left: 42px
+					position: relative
+					font-size: 13px
+					font-weight: 300
+					
+					&:before
+						content: ""
+						position: absolute
+						top: calc(50% - 16px)
+						left: 0px
+						width: 32px
+						height: 32px
+						background: rgba(255,255,255,0.2)
+						border-radius: 50%
+						
+					&:after
+						content: ""
+						position: absolute
+						top: calc(50% - 8px)
+						left: 8px
+						@include mixin-i
+						@include mixin-i-clock
+						filter: invert(1) brightness(1.5)
+
+				
+			&__title
+				font-family: $font-title, sans-serif
+				font-weight: bold
+				line-height: 1.35
+				
+		.link-corner
+			position: absolute
+			bottom: -43px
+			right: -43px
+			width: 88px
+			height: 88px
+			border-radius: 50%
+			background: #82AF53
+			z-index: 2
+			
+			&:before
+				content: ""
+				position: absolute
+				top: 23px
+				left: 23px
+				@include mixin-i
+				@include mixin-i-arrow3
+				transform: rotate(180deg) scale(1.2)
+				
+		.link
+			position: absolute
+			top: 0
+			right: 0
+			bottom: 0
+			left: 0
+			z-index: 3
+			
+			
+			
+/* ****** catalog-info ****** */
+.catalog-info 
+	margin: 25px 0 25px
+	
+	&__text
+		font-size: 15px
+		line-height: 1.7
+		
+		
+		
+		
+/* ****** tabs ****** */
+.tabs 
+	
+	&__control	
+		display: flex
+		
+		.item
+			height: 58px
+			display: inline-flex
+			align-items: center
+			padding: 3px 33px 0
+			border-bottom: 2px solid #fff
+			background: #fff
+			font-size: 12px
+			font-weight: 500
+			text-transform: uppercase
+			color: #575861
+			text-decoration: none
+			text-align: center
+			
+			&.active
+				border-color: #82AF53
+				color: #222327
+	
+	.tab
+		display: none
+		+mtb
+		
+		&.active
+			display: block
+
+	
+	
+	
+/* ****** catalog ****** */
+.catalog 
+	
+	&__tabs
+		margin-top: 28px
+	
+	&__category
+		margin: 27px 0
+	
+		.top-title
+			font-size: 30px
+	
+	&__list
+		margin-top: 21px
+		
+		.item
+			margin-bottom: 45px
+			
+			&__wrap
+				height: 100%
+				position: relative
+				padding: 17px 17px 38px
+				background: #fff
+				box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.05)
+				border: 3px solid #fff
+				border-radius: 7px
+				transition: box-shadow 0.2s ease, border-color 0.2s ease
+				
+				&:hover
+					border-color: #3EAD4F
+					box-shadow: 0px 9px 30px rgba(97, 138, 26, 0.26)
+					
+					.item__download
+						width: 142px
+						
+						.w
+							opacity: 1
+							
+						.icon-pdf
+							background: #fff
+				
+			&__download
+				position: absolute
+				top: 14px
+				right: 21px
+				width: 44px
+				height: 44px
+				display: flex
+				align-items: center
+				border-radius: 22px
+				transition: width 0.3s ease
+				background: #D7F1C3
+				overflow: hidden
+				text-decoration: none
+				
+				&:hover
+					background: #cdefb3
+				
+				.w
+					position: absolute
+					top: 0
+					right: 0
+					bottom: 0
+					width: 88px
+					display: flex
+					align-items: center
+					flex: 1 1 0
+					opacity: 0
+					padding: 4px 15px 3px 0
+					transition: opacity 0.3s ease
+					
+					.t
+						min-width: 63px
+						width: 63px
+						font-size: 10px
+						font-weight: bold
+						color: #0F7A20
+						text-transform: uppercase
+					
+				.icon-pdf
+					min-width: 44px
+					width: 44px
+					height: 44px
+					display: inline-flex
+					align-items: center
+					flex: 0 1 auto
+					justify-content: center
+					background: #D7F1C3
+					transition: background 0.3s ease
+					border-radius: 50%
+					
+					
+				
+				
+			&__img
+				height: 190px
+				display: flex
+				align-items: center
+				justify-content: center
+				
+				img
+					max-width: 100%
+					max-height: 100%
+			
+			&__title
+				margin-top: 8px
+				font-size: 20px
+				text-align: center
+			
+			&__text
+				margin-top: 10px
+				font-size: 14px
+				color: #5D5D65
+			
+			&__spec
+				margin-top: 15px
+				font-size: 12px
+				font-weight: 500
+				text-transform: uppercase
+				color: #323336
+				
+				table
+					width: 100%
+					border-collapse: separate
+					border-spacing: 0
+					margin: 0
+					border: 1px solid #DEDEDE
+					border-radius: 2px
+					
+					tr:first-child
+						td
+							border-top: none
+							
+					tr:last-child
+						td
+							border-bottom: none
+					
+					td
+						padding: 7px 3px
+						border: none
+						border-top: 1px solid #DEDEDE
+						text-align: center
+						
+						& + td
+							border-left: 1px solid #DEDEDE
+						
+						&:first-child
+							border-left: none
+							
+					th
+						padding: 7px 3px 6px
+						font-size: 12px
+						font-weight: 500
+						text-transform: uppercase
+						text-align: center
+						background: #fcfcfc
+			
+			&__bottom
+				position: absolute
+				bottom: -28px
+				left: 17px
+				right: 17px
+
+				.btn
+					width: 100%
+					height: 50px
+					
+					&:hover
+						color: #fff
+	
+
+
+
+/* ****** reasons ****** */
+.reasons 
+	margin: 35px -10px 20px
+	
+	&__item
+		margin: 10px 0
+		
+		&-wrap
+			height: 100%
+			background: #fff
+			position: relative
+			
+			
+		.num
+			position: absolute
+			top: 14px
+			left: 21px
+			font-family: $font-title, sans-serif
+			font-size: 41px
+			color: #3EAD4F
+		
+		.wrap
+			font-size: 14px
+			color: #616267
+			line-height: 1.75
+			
+			
+			
+/* ****** form-partnership ****** */
+.form-partnership 
+	padding: 25px 22px 25px
+	background: linear-gradient(270deg, #97C046 0%, #80AD53 100%)
+	border-radius: 7px
+	color: #fff
+	
+	.title
+		font-family: $font-title, sans-serif
+		font-size: 21px
+		font-weight: bold
+		text-align: center
+		line-height: 1.1
+		
+	.text
+		font-family: $font-title, sans-serif
+		margin-top: 10px
+		font-size: 15px
+		text-align: center
+		
+	.form
+		margin-top: 24px
+		+mtb
+		
+		.field
+			margin-top: 10px
+			position: relative
+			
+			.inp
+				width: 100%
+				
+			textarea.inp
+				height: 91px
+				
+				
+	
+		.notice
+			padding-left: 31px
+			margin-top: 20px
+			position: relative
+			font-size: 12px
+			color: #fff
+			line-height: 1.3
+			
+			&:before
+				content: ""
+				position: absolute
+				top: 1px
+				left: 0
+				@include mixin-i
+				@include mixin-i-lock
+				
+			a
+				color: #fff
+		
+		.bottom
+			margin-top: 28px
+			text-align: center
+			
+			.btn
+				width: 200px
+				
+				
+				
+/* ****** contacts ****** */
+.contacts 
+	margin: 35px 0 25px
+	
+	&__tabs
+		margin-top: 50px
+		
+	&__item
+	
+		& + .contacts__item
+			margin-top: 80px
+			
+		.text
+			font-size: 15px
+			color: #4F555B
+			
+		.company
+			margin-top: 13px
+			font-size: 17px
+			font-weight: 500
+			color: #2A70B7
+		
+		address
+			margin-top: 3px
+			margin-bottom: 8px
+			font-size: 24px
+			font-weight: 500
+			
+		.map
+			border: 1px solid #EAEAEA
+		
+		.wrap
+		
+			&__contact
+				margin-top: 18px
+				padding: 20px 26px
+				background: #fff
+				
+				.t
+					font-size: 15px
+					
+				* + .t
+					margin-top: 17px
+				
+				.phone
+					font-size: 20px
+					
+					a
+						color: #343A55
+						text-decoration: none
+						
+						&:hover
+							text-decoration: underline
+							
+				.mail
+					font-size: 20px
+					
+					a
+						color: #7CB62D
+				
+				.name
+					margin-top: 2px
+					font-size: 18px
+					
+
+
+
+				
+/* ****** feedback-bottom ****** */
+.feedback-bottom 
+	padding: 35px 0 55px
+	background: #fff
+
+
+	&__text
+		margin-top: 3px
+		font-family: $font-title, sans-serif
+		font-size: 15px
+		color: #5D5D65
+		text-align: center
+		
+	&__form
+		margin-top: 35px
+		
+		.form__row
+			margin-top: 31px
+			
+		textarea
+			min-height: 118px
+
+
+		.notice
+			padding-left: 43px
+			margin-top: 22px
+			position: relative
+			font-size: 12px
+			color: #5E6367
+			line-height: 1.3
+			
+			&:before
+				content: ""
+				position: absolute
+				top: calc(50% - 14px)
+				left: 12px
+				@include mixin-i
+				@include mixin-i-lock
+				filter: invert(1) opacity(0.5)
+				
+			a
+				color: #5E6367
+				
+		.bottom
+			margin-top: 19px
+			text-align: center
+			
+			.btn
+				min-width: 200px
+
+
+
+/* ****** sect-title ****** */
+.sect-title 
+	
+	
+	&.--center
+		display: flex
+		justify-content: center
+		
+		.title
+			
+			&:before
+				left: calc(50% - 50px)
+				top: -50px
+				
+	&.--size-s
+		.title
+			font-size: 28px
+				
+
+		
+
+					
 
 
 
@@ -579,6 +1177,12 @@
 		text-transform: uppercase
 		
 	&__wrap
+	
+		.active
+			a
+				color: $c-link
+				text-decoration: underline
+				
 		
 		a
 			color: $c-default
