--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -14,5 +14,12 @@
     font-weight: bold
     font-style: normal
     font-display: swap
+    
+@font-face 
+    font-family: $font-title
+    src: local('Mont Light'), local('Mont-Light'), url('../fonts/Mont-Light.woff2') format('woff2'), url('../fonts/Mont-Light.woff') format('woff'), url('../fonts/Mont-Light.ttf') format('truetype')
+    font-weight: 300
+    font-style: normal
+    font-display: swap
 
 
