--- a/app/sass/_form-elements.sass
+++ b/app/sass/_form-elements.sass
@@ -220,6 +220,10 @@ input[type=number]::-webkit-inner-spin-button
 		font-size: 17px
 		position: relative
 	
+	&.inp--rounded
+		border-radius: 25px
+		padding-left: 25px
+		padding-right: 25px
 
 	&.error 
 		border-color: $error !important
@@ -260,7 +264,7 @@ textarea.inp
 		&__note
 			position: absolute
 			top: -11px
-			left: 21px
+			left: 11px
 			height: 15px
 			padding: 0 6px
 			font-size: 13px
