--- a/app/sass/_media_queries_desktop.sass
+++ b/app/sass/_media_queries_desktop.sass
@@ -331,6 +331,41 @@
 				a
 					font-size: 18px
 					
+	.about-promo
+		&__slider
+			max-width: 65%
+			height: 33vw
+			
+				
+			.item
+				&__wrap
+					height: 33vw
+			
+		&__text
+			max-width: 55%
+			
+	.about-qualities 
+		
+		.item
+			padding: 20px 20px
+
+			&__icon
+				height: 50px
+				
+				span			
+					transform: scale(0.9)
+			
+			&.--big
+				.item__icon
+					span
+						transform: scale(0.48)
+						
+			&__title
+				margin-top: 15px
+				font-size: 16px
+				
+			&__text
+				font-size: 13px
 
 
 
