--- a/app/sass/_sprite-svg.sass
+++ b/app/sass/_sprite-svg.sass
@@ -330,10 +330,20 @@
 
 
 
+@mixin mixin-i-mail4 
+	width: 52px
+	height: 59px
+	background-position: -1068px -887px
+	
+.i.i-mail4 
+	@include mixin-i-mail4
+
+
+
 @mixin mixin-i-micro 
 	width: 34px
 	height: 42px
-	background-position: -1068px -887px
+	background-position: -1120px -946px
 	
 .i.i-micro 
 	@include mixin-i-micro
@@ -343,7 +353,7 @@
 @mixin mixin-i-pdf 
 	width: 25px
 	height: 23px
-	background-position: -1102px -929px
+	background-position: -1154px -988px
 	
 .i.i-pdf 
 	@include mixin-i-pdf
@@ -353,7 +363,7 @@
 @mixin mixin-i-pdf2 
 	width: 25px
 	height: 23px
-	background-position: -1127px -952px
+	background-position: -1179px -1011px
 	
 .i.i-pdf2 
 	@include mixin-i-pdf2
@@ -363,7 +373,7 @@
 @mixin mixin-i-phone 
 	width: 17px
 	height: 18px
-	background-position: -1152px -975px
+	background-position: -1204px -1034px
 	
 .i.i-phone 
 	@include mixin-i-phone
@@ -373,7 +383,7 @@
 @mixin mixin-i-phone2 
 	width: 120px
 	height: 120px
-	background-position: -1169px -993px
+	background-position: -1221px -1052px
 	
 .i.i-phone2 
 	@include mixin-i-phone2
@@ -383,7 +393,7 @@
 @mixin mixin-i-phone3 
 	width: 16px
 	height: 16px
-	background-position: -1289px -1113px
+	background-position: -1341px -1172px
 	
 .i.i-phone3 
 	@include mixin-i-phone3
@@ -393,7 +403,7 @@
 @mixin mixin-i-pointer 
 	width: 14px
 	height: 14px
-	background-position: -1305px -1129px
+	background-position: -1357px -1188px
 	
 .i.i-pointer 
 	@include mixin-i-pointer
@@ -403,7 +413,7 @@
 @mixin mixin-i-pointer2 
 	width: 17px
 	height: 17px
-	background-position: -1319px -1143px
+	background-position: -1371px -1202px
 	
 .i.i-pointer2 
 	@include mixin-i-pointer2
@@ -413,7 +423,7 @@
 @mixin mixin-i-pointer3 
 	width: 14px
 	height: 14px
-	background-position: -1336px -1160px
+	background-position: -1388px -1219px
 	
 .i.i-pointer3 
 	@include mixin-i-pointer3
@@ -423,7 +433,7 @@
 @mixin mixin-i-quotes 
 	width: 88px
 	height: 60px
-	background-position: -1350px -1174px
+	background-position: -1402px -1233px
 	
 .i.i-quotes 
 	@include mixin-i-quotes
@@ -433,7 +443,7 @@
 @mixin mixin-i-shield 
 	width: 39px
 	height: 39px
-	background-position: -1438px -1234px
+	background-position: -1490px -1293px
 	
 .i.i-shield 
 	@include mixin-i-shield
@@ -443,7 +453,7 @@
 @mixin mixin-i-spica 
 	width: 40px
 	height: 56px
-	background-position: -1477px -1273px
+	background-position: -1529px -1332px
 	
 .i.i-spica 
 	@include mixin-i-spica
@@ -453,7 +463,7 @@
 @mixin mixin-i-sunflower 
 	width: 41px
 	height: 57px
-	background-position: -1517px -1329px
+	background-position: -1569px -1388px
 	
 .i.i-sunflower 
 	@include mixin-i-sunflower
@@ -463,7 +473,7 @@
 @mixin mixin-i-temp 
 	width: 68px
 	height: 96px
-	background-position: -1558px -1386px
+	background-position: -1610px -1445px
 	
 .i.i-temp 
 	@include mixin-i-temp
@@ -473,7 +483,7 @@
 @mixin mixin-i-test_tubes 
 	width: 40px
 	height: 39px
-	background-position: -1626px -1482px
+	background-position: -1678px -1541px
 	
 .i.i-test_tubes 
 	@include mixin-i-test_tubes
@@ -483,7 +493,7 @@
 @mixin mixin-i-trash 
 	width: 40px
 	height: 56px
-	background-position: -1666px -1521px
+	background-position: -1718px -1580px
 	
 .i.i-trash 
 	@include mixin-i-trash
