--- a/app/sass/_media_queries_tablet.sass
+++ b/app/sass/_media_queries_tablet.sass
@@ -281,6 +281,31 @@
 		
 	.aside-news
 	
+		
+	
+		&.--slider
+			max-width: 700px
+			margin-left: auto
+			margin-right: auto
+			
+			#slider-news-mini
+				width: 100%
+			
+			.slide
+				display: flex
+			
+			.aside-news__list
+				margin-left: -10px
+				margin-right: -10px
+				
+				.item
+					width: 100%
+					max-width: 100%
+					
+					&__wrap
+						margin-left: 10px
+						margin-right: 10px
+	
 		&__list
 			display: flex
 			flex-wrap: wrap
@@ -329,9 +354,56 @@
 			min-width: 33.33%
 			
 				
+	.subscribe
+		.main__sidebar &
+			margin-left: auto
+			margin-right: auto
+			
+			.icon, .title
+				text-align: center
+				
+	.consultation
+		max-width: 300px
+		margin-left: auto
+		margin-right: auto
 		
+	.about-info
 		
+		.stat
+			padding: 13px 25px 12px 33px
+			
+			&__col
+				padding: 0 10px 0 0
+		
+			.num
+				font-size: 33px
+				
+			.t
+				font-size: 12px
+				
+				
 	
+	.about-promo
+		&__slider
+			max-width: 65%
+			height: 53vw
+			
+				
+			.item
+				&__wrap
+					height: 43vw
+			
+		&__text
+			max-width: 55%
+			
+			
+	
+	.about-qualities
+		justify-content: center
+		
+		.item
+			width: calc(33.3% - 20px)
+			min-width: 275px
 			
 
 	#footer 
@@ -422,4 +494,10 @@
 				width: 100%
 				min-width: 100%
 				margin-top: 45px
+				
+				
+				
+	.about-advantages .list__item
+		padding-right: 10px
+		font-size: 15px
 			
