--- a/app/sass/_media_queries_mobile.sass
+++ b/app/sass/_media_queries_mobile.sass
@@ -837,6 +837,9 @@
 			height: auto
 			min-height: auto
 			
+			&:before
+				display: none
+			
 			
 	
 	.about-advantages
@@ -855,6 +858,17 @@
 				
 				&:last-child
 					padding-right: 0
+					
+					
+	
+	.about-qualities
+		max-width: 300px
+		margin-left: auto
+		margin-right: auto
+		margin-top: 45px
+		
+		.item
+			margin: 20px 0
 				
 	#footer
 		padding-top: 15px
@@ -1395,17 +1409,6 @@
 	
 		
 	
-	
-	.about-qualities
-		max-width: 360px
-		margin-left: auto
-		margin-right: auto
-		margin-top: 45px
-		
-		.item
-			margin: 20px 0
-			
-					
 	.f-nav
 		&__wrap
 			font-size: 13px
